# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:mcpsi.bzl", "mcpsi_cc_library", "mcpsi_cc_test")

package(default_visibility = ["//visibility:public"])

mcpsi_cc_library(
    name = "context",
    hdrs = ["context.h"],
    deps = [
        "//mcpsi/context:state",
         "@yacl//yacl/link",
    ],
)

mcpsi_cc_library(
    name = "state",
    srcs = ["state.cc"],
    hdrs = ["state.h"],
    deps = [
        "@yacl//yacl/crypto/tools:prg",
        "@yacl//yacl/crypto/base/hash:hash_utils",
        "@yacl//yacl/crypto/utils:rand",
        "@yacl//yacl/link",
    ],
)

mcpsi_cc_library(
    name = "register",
    hdrs = ["register.h"],
    deps = [
        ":context",
        ":state",
        "//mcpsi/cr:fake_cr",
        "//mcpsi/ss:protocol",
    ],
)

mcpsi_cc_test(
    name = "context_test",
    srcs = ["context_test.cc"],
    deps = [
        ":context",
        ":register",
        "//mcpsi/utils:test_util",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/utils:serialize",
    ],
)
