load("//bazel:mcpsi.bzl", "mcpsi_cc_library", "mcpsi_cc_test")

package(default_visibility = ["//visibility:public"])

mcpsi_cc_library(
    name = "context",
    hdrs = ["context.h"],
    deps = [
        "//mcpsi/context:state",
         "@yacl//yacl/link",
    ],
)

mcpsi_cc_library(
    name = "state",
    srcs = ["state.cc"],
    hdrs = ["state.h"],
    deps = [
        "@yacl//yacl/crypto/tools:prg",
        "@yacl//yacl/crypto/base/hash:hash_utils",
        "@yacl//yacl/crypto/utils:rand",
        "@yacl//yacl/link",
    ],
)

mcpsi_cc_library(
    name = "register",
    hdrs = ["register.h"],
    deps = [
        ":context",
        ":state",
        "//mcpsi/cr:cr",
        "//mcpsi/cr:true_cr",
        "//mcpsi/cr:fake_cr",
        "//mcpsi/ss:protocol",
    ],
)

mcpsi_cc_test(
    name = "context_test",
    srcs = ["context_test.cc"],
    deps = [
        ":context",
        ":register",
        "//mcpsi/utils:test_util",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/utils:serialize",
    ],
)
