load("//bazel:mcpsi.bzl", "mcpsi_cc_library" , "mcpsi_cc_test")

package(default_visibility = ["//visibility:public"])

mcpsi_cc_library(
    name = "ot_adapter",
    srcs = [
        "ot_adapter.cc",
    ],
    hdrs = [
        "ot_adapter.h",
    ],
    deps = [
        "@yacl//yacl/crypto/primitives/ot:kos_ote",
        "@yacl//yacl/crypto/primitives/ot:ot_store",
        "@yacl//yacl/crypto/primitives/ot:base_ot",
        "@yacl//yacl/crypto/utils:rand",
        "@yacl//yacl/base:dynamic_bitset",
    ],
)

mcpsi_cc_test(
name = "ot_adapter_test",
    srcs = [
        "ot_adapter_test.cc",
    ],
    deps = [
        "//mcpsi/cr/utils:ot_adapter",
        "//mcpsi/utils:test_util",
    ],
)

mcpsi_cc_library(
    name = "ot_helper",
    srcs = [
        "ot_helper.cc",
    ],
    hdrs = [
        "ot_helper.h",
    ],
    deps = [
        ":ot_adapter",
        "//mcpsi/ss:ss_type",
        "//mcpsi/context:state",
        "//mcpsi/utils:field",
        "//mcpsi/utils:vec_op",
    ],
)

mcpsi_cc_test(
name = "ot_helper_test",
    srcs = [
        "ot_helper_test.cc",
    ],
    deps = [
        ":ot_helper",
        "//mcpsi/utils:test_util",
        "//mcpsi/cr",
        "//mcpsi/context:register",
    ],
)

mcpsi_cc_library(
    name = "linear_code",
    hdrs = ["linear_code.h"],
    deps = [
        "@yacl//yacl/crypto/tools:random_permutation",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/utils:thread_pool",
        "//mcpsi/ss:ss_type",
        "//mcpsi/utils:field",
        "//mcpsi/utils:vec_op",
    ] + select({
        "@platforms//cpu:aarch64": [
            "@com_github_dltcollab_sse2neon//:sse2neon",
        ],
        "//conditions:default": [],
    }),
)

mcpsi_cc_test(
    name = "linear_code_test",
    srcs = ["linear_code_test.cc"],
    deps = [
        ":linear_code",
        "//mcpsi/utils:vec_op",
        "//mcpsi/ss:ss_type",
    ],
)